--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://www.jbg.lt"
+url: "https://jbg.lt"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
