--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/avatar-icon.png"
 author:
   name: Some Person
   email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
+  facebook: groups/48368176046/  # eg. daattali
   github: yourname    # eg. daattali
   twitter: yourname   # eg. daattali
   reddit: yourname    # eg. daattali
@@ -61,7 +61,7 @@ author:
 
 # Select which links to show in the footer
 footer-links-active:
-  rss: false
+  rss: true
   facebook: true
   email: true
   twitter: true
