--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: Panevėžio Juozo Balčikonio gimnazijos alumnų asociacijos projek
 navbar-links:
   Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
+    - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
   Įstatai: "istatai"
   Kontaktai: "kontaktai"
 
