--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ share-links-active:
 disqus: "jbgalumni"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-101913176-1"
 
 # Google Tag Manager ID
 #gtm: ""
