--- a/_config.yml
+++ b/_config.yml
@@ -45,12 +45,12 @@ avatar: "/img/jbg-logo.png"
 author:
   name: Panevėžio Juozo Balčikonio gimnazijos alumnų asociacija
   email: "info@jbgalumni.lt"
-  facebook: groups/48368176046/  # eg. daattali
+  facebook: groups/jbgalumni/  # eg. daattali
   github: yourname    # eg. daattali
   twitter: yourname   # eg. daattali
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
+  linkedin: groups/1219377/  # eg. daattali
   xing: yourname      # eg. daattali
   stackoverflow: yourlink  # eg. "3943160/daattali"
   snapchat: yourname  # eg. daattali
@@ -68,7 +68,7 @@ footer-links-active:
   google-plus: false
   github: false
   reddit: false
-  linkedin: false
+  linkedin: true
   xing: false
   stackoverflow: false
   snapchat: false
