--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
   Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
+    - Paskaitų ciklas : "pasilieku-po-skambu-io"
   Įstatai: "istatai"
   Kontaktai: "kontaktai"
 
