--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
     - Paskaitų ciklas : "pasilieku-po-skambu-io"
-    - JBG Alumni Kalėdos: ""
+    - JBG Alumni Kalėdos:
     - JBG Alumni rekomenduoja: 
     - JBG Pavasario praktika: 
   Nariams:
