Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
   Renginiai ir Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
-    - Paskaitų ciklas : "pasilieku-po-skambu-io"
+    - Paskaitų ciklas : "/pasilieku-po-skambu-io/"
     - JBG Alumni Kalėdos: ""
     - JBG Alumni rekomenduoja: ""
     - JBG Pavasario praktika: ""
