--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navbar-links:
     - Paskaitų ciklas : "/pasilieku-po-skambu-io/"
     - JBG Alumni Kalėdos: ""
     - JBG Alumni rekomenduoja: ""
-    - JBG Pavasario praktika: ""
+    - JBG Pavasario praktika: "/jbg-pavasario-praktika/"
   Nariams:
     - Noriu naujienlaiškio: ""
     - Vinjetės: ""
