Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Panevėžio Juozo Balčikonio gimnazijos alumnų asociacijos projek
 navbar-links:
   Asociacija:
     - Naujienos: ""
-    - JBG Alumni valdyba: ""
+    - JBG Alumni valdyba: "/jbg-alumni-valdyba/"
     - JBG Alumni aktyvūs nariai: ""
     - JBG Alumni kalendorius: ""
     - Naujienlaiškiai: ""
