Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   Asociacija:
     - Naujienos: ""
     - JBG Alumni valdyba: "/jbg-alumni-valdyba/"
-    - JBG Alumni aktyvūs nariai: ""
+    - JBG Alumni aktyvūs nariai: "/jbg-alumni-aktyv-s-nariai/"
     - JBG Alumni kalendorius: ""
     - Naujienlaiškiai: ""
   Renginiai ir Projektai:
