Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,10 @@ navbar-links:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
     - Paskaitų ciklas : "/pasilieku-po-skambu-io/"
-    - JBG Alumni Kalėdos: ""
+    - JBG Alumni Kalėdos: "/jbg-alumni-kal-dos/"
     - JBG Alumni rekomenduoja: ""
     - JBG Pavasario praktika: "/jbg-pavasario-praktika/"
+    - JBG Alumni teisės akademija: ""
   Nariams:
     - Noriu naujienlaiškio: ""
     - Vinjetės: ""
