--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navbar-links:
     - Paskaitų ciklas : "/pasilieku-po-skambu-io/"
     - JBG Alumni Kalėdos: "/jbg-alumni-kal-dos/"
     - JBG Alumni rekomenduoja: ""
-    - JBG Pavasario praktika: "/jbg-pavasario-praktika/"
+    - JBG Pavasario praktika: "jbg-pavasario-praktika"
     - JBG Alumni teisės akademija: ""
   Nariams:
     - Noriu naujienlaiškio: ""
