Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,15 @@ description: Panevėžio Juozo Balčikonio gimnazijos alumnų asociacijos projek
 navbar-links:
   Asociacija:
     - Naujienos: ""
-    - JBG Alumni valdyba: "/jbg-alumni-valdyba/"
-    - JBG Alumni aktyvūs nariai: "/jbg-alumni-aktyv-s-nariai/"
+    - JBG Alumni valdyba: "jbg-alumni-valdyba"
+    - JBG Alumni aktyvūs nariai: "jbg-alumni-aktyv-s-nariai"
     - JBG Alumni kalendorius: ""
     - Naujienlaiškiai: ""
   Renginiai ir Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
-    - Paskaitų ciklas : "/pasilieku-po-skambu-io/"
-    - JBG Alumni Kalėdos: "/jbg-alumni-kal-dos/"
+    - Paskaitų ciklas : "pasilieku-po-skambu-io"
+    - JBG Alumni Kalėdos: "jbg-alumni-kal-dos"
     - JBG Alumni rekomenduoja: ""
     - JBG Pavasario praktika: "jbg-pavasario-praktika"
     - JBG Alumni teisės akademija: ""
