Missing en translation: actions.commits.update

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ navbar-links:
     - JBG Alumni Kalėdos: "jbg-alumni-kal-dos"
     - JBG Alumni rekomenduoja: ""
     - JBG Pavasario praktika: "jbg-pavasario-praktika"
-    - JBG Alumni teisės akademija: ""
+    - JBG Alumni teisės akademija: "teis-s-akademija"
   Nariams:
     - Noriu naujienlaiškio: ""
     - Vinjetės: ""
