--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
   Renginiai ir Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
     - JBG Alumni Žemėlapis : "http://vycius.lt/alumni/"
-    - Paskaitų ciklas : "pasilieku-po-skambu-io"
+    - Paskaitų ciklas "Pasilieku po skambučio" : "pasilieku-po-skambu-io"
     - JBG Alumni Kalėdos: "jbg-alumni-kal-dos"
     - JBG Alumni rekomenduoja: ""
     - JBG Pavasario praktika: "jbg-pavasario-praktika"
