--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
     - Naujienos: ""
     - Valdyba: "jbg-alumni-valdyba"
     - Aktyvūs nariai: "jbg-alumni-aktyv-s-nariai"
+    - Parama: "parama"
     - Kontaktai: "kontaktai"
   Renginiai ir Projektai:
     - JBG Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
