--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ navbar-links:
     - JBG Alumni Kalėdos: "jbg-alumni-kal-dos"
     - JBG Pavasario praktika: "jbg-pavasario-praktika"
     - JBG Alumni teisės akademija: "teis-s-akademija"
+    - Stipendija ekonomikos stovyklai: "stipendija-ekonomikos-stovyklai"
   Nariams:
     - Vinjetės: "https://www.dropbox.com/sh/jcwibqhf7urx16f/AACZa5v8RaINS23DAhtoS8qXa?dl=0"
 
