--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ navbar-links:
     - JBG Pavasario praktika: "jbg-pavasario-praktika"
     - JBG Alumni teisės akademija: "teis-s-akademija"
     - Stipendija ekonomikos stovyklai: "ekonomikos-stovykla"
-    - JBG Alumni teisės akademija: "jbg-alumni-stipendija"
+    - JBG Alumni stipendija: "jbg-alumni-stipendija"
   Nariams:
     - Vinjetės: "https://www.dropbox.com/sh/jcwibqhf7urx16f/AACZa5v8RaINS23DAhtoS8qXa?dl=0"
 
