--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ social-network-links:
   email: "info@jbgalumni.lt"
   facebook: groups/jbgalumni/
   linkedin: groups/1219377/
+  github: balcikonis/jbg-alumni-website
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
