--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ navbar-links:
     - Knygų lentyna: "knygu-lentyna"
   Nariams:
     - Vinjetės: "https://www.dropbox.com/sh/jcwibqhf7urx16f/AACZa5v8RaINS23DAhtoS8qXa?dl=0"
+    - Naujienlaikraštis: "naujienlaikrastis"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
