--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ navbar-links:
     - Alumni stipendija: "stipendija"
     - Knygų lentyna: "knygu-lentyna"
   Nariams:
-    - Naujienlaikraštis: "naujienlaikrastis"
+    - Naujienlaiškis: "naujienlaiskis"
     - Vinjetės: "https://www.dropbox.com/sh/jcwibqhf7urx16f/AACZa5v8RaINS23DAhtoS8qXa?dl=0"
 
 # Image to show in the navigation bar - image must be a square (width = height)
