Add istatai menu item

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ navbar-links:
     - Valdyba: "valdyba"
     - Aktyvūs nariai: "aktyvus-nariai"
     - Parama: "parama"
+    - Įstatai: "istatai"
     - Kontaktai: "kontaktai"
   Renginiai ir Projektai:
     - Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
