Add financial statements

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
     - Aktyvūs nariai: "aktyvus-nariai"
     - Parama: "parama"
     - Įstatai: "istatai"
+    - Finansinės ataskaitos: "https://www.dropbox.com/sh/9ff7enludafo0t6/AADT4FWbP5eToNQIvNFpryBVa"
     - Kontaktai: "kontaktai"
   Renginiai ir Projektai:
     - Didysis Brolis/Sesė : "http://mentoryste.jbgalumni.lt/"
