Add Garbės atestatas

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ navbar-links:
     - Stipendija ekonomikos stovyklai: "ekonomikos-stovykla"
     - Alumni stipendija: "stipendija"
     - Knygų lentyna: "knygu-lentyna"
+    - Garbės atestatas: "garbes-atestatas"
   Nariams:
     - Naujienlaiškis: "naujienlaiskis"
     - Vinjetės: "https://www.dropbox.com/sh/jcwibqhf7urx16f/AACZa5v8RaINS23DAhtoS8qXa?dl=0"
